final fix to spacing

--- a/_sass/_readinggroup.scss
+++ b/_sass/_readinggroup.scss
@@ -1,2 +1,2 @@
-.readingspacing { display: inline-block; width: 100px; }
+.readingspacing { display: inline-block; width: 47px; }
 .readingpaperspacing { padding-left: 100px; text-indent:-100px;}
